<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/image_background"
    android:orientation="vertical"
    android:gravity="center"
    android:alpha=".9"
    tools:context=".Views.Login.RegisterActivity"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="#FF4081"
                    android:singleLine="true"
                    android:hint="@string/name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableTint="#FF4081"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableTint="#FF4081"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/reg_passwordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableTint="#FF4081"
                    android:hint="@string/again_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/reg_error"
                android:text=""
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#d67601"
                android:text="@string/reg_kaydet"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:onClick="register_onclick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#d67601"
                android:text="@string/reg_iptal"
                android:onClick="cancel_onclick"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
